--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -31,5 +31,5 @@ websockets==12.0
 python-dotenv==1.0.1
 
 # Dev & Testing
-pytest==8.0.0
-pytest-asyncio==0.23.4
+pytest>=7.0.0
+pytest-asyncio>=0.21.0
