--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -13,6 +13,7 @@ alembic==1.13.1
 # Data Validation
 pydantic==2.6.1
 pydantic-settings==2.1.0
+email-validator==2.1.0
 
 # Authentication
 python-jose[cryptography]==3.3.0
