--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,13 @@ node_modules/
 # Environment files
 .env
 .env.local
+.env.development
+.env.test
+.env.production
+.env.staging
 .env.*.local
+.env.backup
+.env.bak
 
 # IDE files
 .idea/
